# src/main/java/br/com/budget/models/dto/RevenueTypeDTO.java
@@ -1,0 +1,11 @@
+package br.com.budget.models.dto;
+
+import br.com.budget.models.entities.RevenueType;
+import jakarta.validation.constraints.NotBlank;
+import java.util.UUID;
+
+public record RevenueTypeDTO(UUID id, @NotBlank String name) {
+    public static RevenueTypeDTO from(RevenueType entity) {
+        return new RevenueTypeDTO(entity.getId(), entity.getName());
+    }
+}
